changed pagination color and removed outlines on inputs

--- a/vmax_src/templates/navbar.html
+++ b/vmax_src/templates/navbar.html
@@ -76,7 +76,7 @@
                 </ul>
                 <form class="navbar-form navbar-right" action="/search/" method="get">
 
-                        <input id="id_q" maxlength="100" name="q" placeholder="Search Volume.max()" type="text" style="color:black; font-weight:700;border-radius: 5px;width: 200px;border-style: solid;border-width: 2px;border-color: #D50000;outline-color: #D50000;">
+                        <input id="id_q" maxlength="100" name="q" placeholder="Search Volume.max()" type="text" style="color:black; font-weight:700;border-radius: 5px;width: 200px;border-style: solid;border-width: 2px;border-color: #D50000;outline: none;">
 
                         <input type="submit" class="custom-btn" value="Search" style="
                         border-radius: 5px;
@@ -84,7 +84,7 @@
                         border-width: 2px;
                         border-style: solid;
                         border-color: #D50000;
-                        outline-color: #D50000;">
+                        outline: none;">
                 </form>
             </div>
             <!-- /.navbar-collapse -->
