finalize data table for artists and albums

--- a/vmax_src/static/static_root/css/grayscale.css
+++ b/vmax_src/static/static_root/css/grayscale.css
@@ -271,17 +271,6 @@ a:focus {
     padding-top: 100px;
 }
 
-.download-section {
-    width: 100%;
-    padding: 50px 0;
-    color: #fff;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-    background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
 
 #map {
     width: 100%;
@@ -309,23 +298,25 @@ a:focus {
     text-transform: uppercase;
     font-family: Jura,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 400;
+    color: #D50000;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
 }
 
 .btn-default {
-    border: 1px solid #42dca3;
-    color: #42dca3;
+    border: 1px solid #D50000;
+    color: #D50000;
     background-color: transparent;
+    border-radius: 5px;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #42dca3;
+    border: 1px solid #D50000;
     outline: 0;
     color: #000;
-    background-color: #42dca3;
+    background-color: #D50000;
 }
 
 ul.banner-social-buttons {
@@ -386,6 +377,6 @@ body {
 
 .profilepic{
     margin-left: 20px;
-
-
 }
+
+
