removed database links from navbar

--- a/vmax_src/templates/artists.html
+++ b/vmax_src/templates/artists.html
@@ -16,6 +16,7 @@
 
             <div class="col-lg-12">
                 <h1 class="page-header">Artists</h1>
+                <a href="{% url 'artistdatabase' %}"><p align="center" style="font-size: 14px;">Click here for Artist Database</p></a>
             </div>
             {% for artist in artist_list %}
             <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
