--- a/vmax_src/templates/albums.html
+++ b/vmax_src/templates/albums.html
@@ -16,6 +16,7 @@
 
             <div class="col-lg-12">
                 <h1 class="page-header">Albums</h1>
+                <a href="{% url 'albumdatabase' %}"><p align="center" style="font-size: 14px;">Click here for Album Database</p></a>
             </div>
             {% for album in albums_list %}
 
