--- a/vmax_src/static/vmax_static/css/thumbnail-gallery.css
+++ b/vmax_src/static/vmax_static/css/thumbnail-gallery.css
@@ -11,18 +11,25 @@ footer {
 }
 
 a.thumbnail:hover {
-	box-shadow: 0 0 100px #D50000;
-	-moz-box-shadow: 0 0 100px #D50000;
-	-webkit-box-shadow: 0 0 100px #D50000;
+	box-shadow: 0 0 110px #D50000;
+	-moz-box-shadow: 0 0 110px #D50000;
+	-webkit-box-shadow: 0 0 110px #D50000;
 }
 
-/*.img-responsive {
-/*filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */    
-  /* -webkit-filter: grayscale(100%);
-   -moz-filter: grayscale(100%);
-   -ms-filter: grayscale(100%);
-   filter: grayscale(100%);
-   filter: gray; /* IE 6-9 */
+a.thumbnail:hover {
+    -webkit-transform:scale(1.1); /* Safari and Chrome */
+    -moz-transform:scale(1.1); /* Firefox */
+    -ms-transform:scale(1.1); /* IE 9 */
+    -o-transform:scale(1.1); /* Opera */
+     transform:scale(1.1);
+}
 
-/*}
+a.thumbnail {
+  -webkit-transition: all .35s ease; /* Safari and Chrome */
+    -moz-transition: all .35s ease; /* Firefox */
+    -o-transition: all .35s ease; /* IE 9 */
+    -ms-transition: all .35s ease; /* Opera */
+    transition: all .35s ease;
+    max-width: 100%;
+}
 
