--- a/vmax_src/templates/album_database.html
+++ b/vmax_src/templates/album_database.html
@@ -45,10 +45,10 @@
                     <img class="img-responsive" src="{{album.image_url}}" alt="" width="200" height="200" 
                     style="border-radius: 5px;border-style: solid;border-width: 2px;border-color: #D50000;"> 
                 </a></td>  
-                            <td>{{album.album_name}}</td>  
-                            <td>{{album.album_artist.full_name}} </td>  
+                            <td style="text-transform: capitalize;">{{album.album_name}}</td>  
+                            <td style="text-transform: capitalize;">{{album.album_artist.full_name}} </td>  
                             <td>{{album.release_date}}</td>
-                            <td>{{album.genre}}</td>  
+                            <td style="text-transform: capitalize;"> {{album.genre}}</td>  
                           </tr>
                           {% endfor %} 
                            
