added more titles and ico

--- a/vmax_src/templates/dynamic_album.html
+++ b/vmax_src/templates/dynamic_album.html
@@ -1,5 +1,6 @@
 {% extends "navbar.html" %}
 {% block head %}
+<title>Volume.max() - {{ album.album_name }}</title>
     {% load staticfiles %}
   {{block.super}}
 {% endblock %}
