--- a/vmax_src/templates/artist_database.html
+++ b/vmax_src/templates/artist_database.html
@@ -42,7 +42,7 @@
                         <tbody> 
                             {% for artist in artist_list %} 
                           <tr>  
-                            <td> <a href="{% url 'artist_view' artist.get_absolute_url %}">
+                            <td> <a class="data-pic" href="{% url 'artist_view' artist.get_absolute_url %}">
                     <img class="img-responsive" src="{{artist.image_url}}" width="200" height="200" 
                     style="border-radius: 5px;border-style: solid;border-width: 2px;border-color: #D50000;"></a></td>  
                             <td style="text-transform: capitalize;"><a href="{% url 'artist_view' artist.get_absolute_url %}">{{artist.full_name}}</a></td>  
