--- a/vmax_src/templates/dynamic_artist.html
+++ b/vmax_src/templates/dynamic_artist.html
@@ -1,5 +1,6 @@
 {% extends "navbar.html" %}
 {% block head %}
+<title>Volume.max() - {{ artist.full_name }}</title>
     {% load staticfiles %}
   {{block.super}}
 {% endblock %}
