--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -11,6 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="shortcut icon" href="{% static 'img/music-icon.png'%}">
     <title>Volume.max()</title>
 
     <!-- Bootstrap Core CSS -->
