add background video

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -95,6 +95,16 @@
         <div class="row">
 
         </div>
+
+
+        <!--Unit Tests Row-->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Unit Tests</h1>
+            </div>
+        </div>
+        <hr>
+        
         <!-- Stats Row -->
         <div class="row">
             <div class="col-lg-12">
@@ -168,6 +178,10 @@
 <hr>
             </div>
         </div>
+
+        
+
+        
 {% endblock %}
 {% block footer %}
   {{block.super}}
