--- a/vmax_src/templates/nfl.html
+++ b/vmax_src/templates/nfl.html
@@ -4,7 +4,7 @@
 <!--head tag-->
 
 {% block head %}
-<title>Volume.max() - Artist Database</title>
+<title>Volume.max() - NFL</title>
   {{block.super}}
 
 {% endblock %}
@@ -22,7 +22,7 @@
     <div class="container">
 
             <div class="col-lg-12">
-                <h1 class="page-header">Artist Database</h1>
+                <h1 class="page-header">NFL Player's Pick Top 100</h1>
             </div>
     </div>
 
