--- a/vmax_src/templates/navbar.html
+++ b/vmax_src/templates/navbar.html
@@ -64,6 +64,9 @@
                     <li>
                         <a  href="../albums">Albums</a>
                     </li>
+                    <li>
+                        <a href="#">NFL</a>
+                    </li>
                 </ul>
                 <form class="navbar-form navbar-right" action="/search/" method="get">
 
