cetner the iframe widget

--- a/vmax_src/templates/dynamic_album.html
+++ b/vmax_src/templates/dynamic_album.html
@@ -37,7 +37,9 @@
 
         <!-- Spotify tracks player -->
         <h3 align="middle">Track listing</h3>
-        <iframe src="https://embed.spotify.com/?uri={{album.spotify_albums_uri}}" width="300" height="380" frameborder="0" align="middle" allowtransparency="true"></iframe>
+            <center>
+                <iframe src="https://embed.spotify.com/?uri={{album.spotify_albums_uri}}" width="300" height="380" frameborder="0" allowtransparency="true" ></iframe>
+            </center>
         <br>
         <!-- close line -->
        <hr>
