modifying big video

--- a/vmax_src/templates/home.html
+++ b/vmax_src/templates/home.html
@@ -102,7 +102,7 @@
 
             
 
-            <div class="container">
+            <div class="container" >
 
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
@@ -140,6 +140,7 @@
     <script src="{% static 'js/grayscale.js' %}"></script>
 
     <!--BigVideo Dependencies-->
+    <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/jquery-ui.js' %}"></script>
     <script src="{% static 'js/jquery-ui.min.js' %}"></script>
     <script src="{% static 'js/video.js' %}"></script>
