Added unit tests to About page, fixes #66

--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -101,6 +101,13 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Unit Tests</h1>
+
+                <h6>Results of SearchTestCase:</h6>
+                {{search_results}}<br><br>
+                <h6>Results of ArtistTestCase: </h6>
+                {{artist_results}}<br><br>
+                <h6>Results of APITests: </h6>
+                {{API_results}}
             </div>
         </div>
         <hr>
