--- a/vmax_src/static/vmax_static/css/bigvideo.css
+++ b/vmax_src/static/vmax_static/css/bigvideo.css
@@ -5,14 +5,14 @@
 #big-video-vid,#big-video-image{position:absolute;}
 #big-video-control-container{position:fixed;bottom:0;padding:10px;width:100%;background:rgba(0,0,0,.25);
   -webkit-transition-duration:0.6s;-moz-transition-duration:0.6s;-ms-transition-duration:0.6s;-o-transition-duration:0.6s;transition-duration:0.6s;}
-#big-video-control{width:100%;height:16px;position:relative;}
-#big-video-control-middle{margin: 0 56px 0 24px;}
-#big-video-control-bar{width:100%;height:16px;position:relative;cursor:pointer;}
-#big-video-control-progress{position:absolute;top:7px;height:3px;width:0%;background:#fff;}
-#big-video-control-track{position:absolute;top:8px;height:1px;width:100%;background:#fff; display: none;}
-#big-video-control-bound-left{left:0;}
+#big-video-control{width:100%;height:16px;position:relative; color: #fff;}
+#big-video-control-middle{margin: 0 56px 0 24px; color: #fff;}
+#big-video-control-bar{width:100%;height:16px;position:relative;cursor:pointer; color: #fff;}
+#big-video-control-progress{position:absolute;top:7px;height:3px;width:0%;background:#fff;  color: #fff;}
+#big-video-control-track{position:absolute;top:8px;height:1px;width:100%;background:#fff; display: none; color: #fff;}
+#big-video-control-bound-left{left:0; color: #fff;}
 #big-video-control-bound-right{right:-1px}
-#big-video-control-track .ui-slider-handle {opacity:0;}
+#big-video-control-track .ui-slider-handle {opacity:0; color: #fff;}
 #big-video-control-playhead{left:30%;}
 #big-video-control-play{position:absolute;top:0;left:0;height:16px;width:16px;background-image:url('bigvideo.png');}
 #big-video-control-timer{position:absolute;top:1px;right:0;color:#fff;font-size:1px;}
