--- a/vmax_src/templates/albums.html
+++ b/vmax_src/templates/albums.html
@@ -22,7 +22,7 @@
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb text-center">
                 <a class="thumbnail" href="{% url 'album_view' album.get_absolute_url %}">
-                    <img class="img-responsive" src="{{album.image_url}}" alt=""> 
+                    <img class="img-responsive" src="{{album.image_url}}" alt="" width="320" > 
                 </a>
                 <h6>{{album.album_name}}</h6>
             </div>
