--- a/vmax_src/templates/about.html
+++ b/vmax_src/templates/about.html
@@ -34,7 +34,7 @@
                 <h4>Efosa "Efe" Elaiho</h4>
                 <h6>Front-End/Back-End Development & UX/UI</h6>
                 <h6>Number of Commits: 57</h6>
-                <h6>Number of Issues: 23</h6>
+                <h6>Number of Issues: 48</h6>
                 <h6>Number of Unit Tests: 0</h6>
                 <p>A computer science major from Dallas,TX. Loves sushi rolls. Firmly believes Dez Bryant caught the ball!</p>
             </div>
@@ -43,7 +43,7 @@
                 <h4>Raymond Ton</h4>
                 <h6>Back-End Development</h6>
                 <h6>Number of Commits: 23</h6>
-                <h6>Number of Issues: 8</h6>
+                <h6>Number of Issues: 12</h6>
                 <h6>Number of Unit Tests: 22</h6>
                 <p>Student seeking a bachelor's degree in computer science. Interests include online gaming, music, and basketball.</p>
             </div>
@@ -51,9 +51,9 @@
                 <img class="img-circle img-responsive img-center aboutpic aboutrow" src="{% static 'img/justin.jpg' %}" alt="" height="200" width="200">
                 <h4>Justin Winata</h4>
                 <h6> API / Back-End Development </h6>
-                <h6>Number of Commits: 38</h6>
-                <h6>Number of Issues: 6</h6>
-                <h6>Number of Unit Tests: 0</h6>
+                <h6>Number of Commits: 54</h6>
+                <h6>Number of Issues: 17</h6>
+                <h6>Number of Unit Tests: 6</h6>
                 <p>Originally from Sugar Land, TX and now currently a student at UT Austin, a part-time Software Contractor at Tempo Semiconductor, Inc., and team member trainee for Koinonia Austin trying to balance work, school, and ministry.</p>
             </div>
         </div>
@@ -63,7 +63,7 @@
                 <h4>Chang Chih Chi #Johnny</h4>
                 <h6> Front-End Development & UX/UI</h6>
                 <h6>Number of Commits: 45</h6>
-                <h6>Number of Issues: 2</h6>
+                <h6>Number of Issues: 7</h6>
                 <h6>Number of Unit Tests: 0</h6>
                 <p>Authentic Taiwanese, enjoys life and friendship in Austin. He tries to keep this site classy :D</p>
 
@@ -73,8 +73,8 @@
                 <h4>Mark Laver</h4>
                 <h6> API / Back-End Development/ Server </h6>
                 <h6>Number of Commits: 51</h6>
-                <h6>Number of Issues: 9</h6>
-                <h6>Number of Unit Tests: 0</h6>
+                <h6>Number of Issues: 18</h6>
+                <h6>Number of Unit Tests: 8</h6>
                 <p>Mark is a former Marine pursuing a bachelor's degree in computer science. Interests include scuba and history.</p>
 
             </div>
@@ -85,7 +85,10 @@
                 <h5><a href="https://github.com/efeelaiho/TheCodas/wiki" target="_blank">GitHub Wiki</a></h5>
                 <h5><a href="https://github.com/efeelaiho/TheCodas/issues" target="_blank">GitHub Issue Tracker</a></h5>
                 <a href="http://docs.volumemax.apiary.io/#" target="_blank">
-                    <img class="img-responsive" src="{% static 'img/apiary-logo.png' %}" alt="">
+                    <img src="{% static 'img/apiary-logo.png' %}" alt="">
+                </a>
+                <a href="http://slides.com/greenday3470/cs373-2#/" target="_blank">
+                    <img src="{% static 'img/slides.png' %}" alt="" width="120" height="120" alt="Slide Deck">
                 </a>
             </div>            
         </div>
@@ -101,7 +104,9 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Unit Tests</h1>
-
+                <!--<img height="70" width ="70" src="{% static 'img/loading.gif' %}">
+                Removed spinner.  Page loads too quickly for it to make sense.     
+                Refresh the page and observe the times change to prove to yourself it loads dynamically -->
                 <h6>Results of SearchTestCase:</h6>
                 {{search_results}}<br><br>
                 <h6>Results of ArtistTestCase: </h6>
@@ -116,8 +121,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Stats</h1>
-                <h5>Total number of commits: 214</h5>
-                <h5>Total number of issues: 48</h5>
+                <h5>Total number of commits: 298</h5>
+                <h5>Total number of issues: 103</h5>
                 <h5>Total number of unit tests: 22</h5>
             </div>
         </div>
