--- a/vmax_src/templates/navbar.html
+++ b/vmax_src/templates/navbar.html
@@ -65,7 +65,7 @@
                         <a  href="../albums">Albums</a>
                     </li>
                     <li>
-                        <a href="#">NFL</a>
+                        <a href="../nfl">NFL</a>
                     </li>
                 </ul>
                 <form class="navbar-form navbar-right" action="/search/" method="get">
