--- a/vmax_src/templates/nfl.html
+++ b/vmax_src/templates/nfl.html
@@ -22,9 +22,10 @@
     <div class="container">
 
             <div class="col-lg-12">
-                <h1 class="page-header">NFL Player's Pick Top 100</h1>
+                <h1 class="page-header">Upcoming Artist Performances</h1>
             </div>
     </div>
+
 
 
     <div class="container">
@@ -32,23 +33,27 @@
                 <table id="albumTable" class="display table" width="100%" >
                     <thead>  
                           <tr>  
-                            <th>Photo</th>  
-                            <th>Name</th>  
-                            <th>Origin</th>
-                            <th>Popularity</th>  
-                            <th>Genre</th>  
+                            <th>Stadium</th>  
+                            <th>Team</th>  
+                            <th>City</th>
+                            <th>State</th>  
+                            <th>Artist</th>  
+                            <th></th>
                           </tr>  
                     </thead>  
                         <tbody> 
-                            {% for artist in artist_list %} 
+                            {% for team, artist in teams %} 
+                            <!-- {{artist}} <br> <br> -->
                           <tr>  
-                            <td> <a href="{% url 'artist_view' artist.get_absolute_url %}">
-                    <img class="img-responsive" src="{{artist.image_url}}" width="200" height="200" 
-                    style="border-radius: 5px;border-style: solid;border-width: 2px;border-color: #D50000;"></a></td>  
-                            <td style="text-transform: capitalize;"><a href="{% url 'artist_view' artist.get_absolute_url %}">{{artist.full_name}}</a></td>  
-                            <td style="text-transform: capitalize;">{{artist.origin}}</td>  
-                            <td>{{artist.popularity}}</td>
-                            <td style="text-transform: capitalize;">{{artist.genre}}</td>  
+                            <td> 
+                    <img class="img-responsive" src="{{team.simage}}" width="200" height="200" 
+                    style="border-radius: 5px;border-style: solid;border-width: 2px;border-color: #D50000;"></td>  
+                            <td style="text-transform: capitalize;">{{team.team}}</a></td>  
+                            <td style="text-transform: capitalize;">{{team.city}}</td>  
+                            <td>{{team.state}}</td>
+                            <td><a href="{% url 'artist_view' artist.get_absolute_url %}">{{artist.full_name}}</a></td> 
+                            <td><a href="{% url 'artist_view' artist.get_absolute_url %}"><img class="img-responsive" src="{{artist.image_url}}" width="150" height="150" 
+                    style="border-radius: 5px;border-style: solid;border-width: 2px;border-color: #D50000;"> </a>
                           </tr>  
                            {% endfor %}
                           
